# crisp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README  benchmark.crisp  bintree.crisp  crisp.c  crisp.h  ffi.c  fuzz_parser.c  interpreter.c  libc_demo.crisp  math.c  parse.c  rank_select.crisp  recursion.crisp  stdlib.crisp  tests  tests.crisp
examples/: benchmark.crisp  binzipper.crisp  libc_demo.crisp  recursion.crisp
fuzzing/: afl_dict.txt  fuzz_parser.c
modules/map/: CMakeLists.txt  map.c  map.crisp  test.crisp
modules/queue/: CMakeLists.txt  queue.c  queue.crisp  test.crisp
modules/sdl2/: CMakeLists.txt  sdl2.crisp
modules/std/: CMakeLists.txt  math.c  std.c  std.crisp
modules/strict-test/: CMakeLists.txt  strict-test.c  strict-test.crisp
