add_library(map MODULE map.c map.crisp.o)
set_target_properties(map PROPERTIES SUFFIX ".crisp.so")
add_custom_command(OUTPUT map.crisp COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/map.crisp MAIN_DEPENDENCY map.crisp)
add_custom_command(OUTPUT map.crisp.o COMMAND ld -r -b binary -o map.crisp.o map.crisp MAIN_DEPENDENCY map.crisp)
install(TARGETS map DESTINATION lib)
